<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_belajar"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/tentang_aplikasi"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/profil_paseafic"
            app:layout_constraintTop_toBottomOf="@id/app" />

        <TextView
            android:id="@+id/des_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:text="@string/deskripsi_aplikasi"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_logout"
            android:layout_gravity="center"
            android:layout_width="320dp"
            android:layout_height="65dp"
            app:cardCornerRadius="40dp"
            app:cardBackgroundColor="@color/pink">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:text="@string/logout"
                android:textColor="@color/navy"
                android:textSize="32sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>