<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_belajar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judulapp_text"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="30dp"
            android:paddingLeft="31dp"
            android:layout_gravity="left"
            android:fontFamily="@font/lilita_one"
            android:text="@string/home_tag"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/info_belajar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_light"
            android:paddingLeft="31dp"
            android:paddingRight="16dp"
            android:paddingBottom="30dp"
            android:text="@string/home_caption"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview1"
            android:layout_gravity="center"
            android:layout_width="330dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/tosca_1">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubuntu"
                android:gravity="bottom"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:text="@string/berita_1"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview2"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/tosca_2"
            android:layout_width="330dp"
            android:layout_height="100dp"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/info_text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:gravity="bottom"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp"
                android:text="@string/berita_2"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview3"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/tosca_3"
            android:layout_width="330dp"
            android:layout_height="100dp"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/info_text3"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:textSize="16sp"
                android:text="@string/berita_3"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview4"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/tosca_4"
            android:layout_width="330dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/info_text4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ubuntu"
                android:gravity="bottom"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:text="@string/berita_4"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview5"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/tosca_5"
            android:layout_width="330dp"
            android:layout_height="100dp"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/info_text5"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:text="@string/berita_5"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview6"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/tosca_6"
            android:layout_width="330dp"
            android:layout_height="100dp"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/info_text6"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:text="@string/berita_6"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardview7"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/black"
            android:layout_width="330dp"
            android:layout_height="100dp"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/info_text7"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:fontFamily="@font/ubuntu"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:textSize="16sp"
                android:text="@string/berita_7"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>