<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_register">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/regis_text"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/app_name"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/logo_paseafic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/email_text"
                android:textColor="@color/white">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namaText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/emailText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:hint="@string/nama_lengkap">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwText"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/namaText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:textColor="@color/white"
                android:hint="@string/pass_text"
                android:password="true">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmpass_rg"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_centerInParent="true"
            app:hintTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwText"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmpass_etextr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/confirm_pass"
                android:textColor="@color/white"
                android:password="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/regisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/regis_text"
            android:textColor="@color/navy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmpass_rg" />

        <TextView
            android:id="@+id/linkto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/to_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regisButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>